--- a/styles/pasapalabra.css
+++ b/styles/pasapalabra.css
@@ -248,7 +248,7 @@ button{
 
 	height: 50px;
     width: 50px;
-    /* display: initial; */
+    /* display: initial; 
     background-color: grey;
     border-radius: 50%;
     margin: 24px;
